--- a/assignment6.ipynb
+++ b/assignment6.ipynb
@@ -2,12 +2,16 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "title: STATS 3DA3\n",
     "subtitle: Homework Assignment 6\n",
-    "author: \"Pratheepa Jeganathan\"\n",
+    "author: \"Ying Cui(400296443) Jiaxin Yu(400318460) Ziyu He (400322218)\"\n",
     "date: 04/04/2024\n",
     "format: pdf\n",
     "header-includes:\n",
@@ -24,7 +28,6 @@
     "fontsize: 11pt\n",
     "geometry: margin = 1in\n",
     "linestretch: 1.5\n",
-    "bibliography: ass6.bib\n",
     "---"
    ]
   },
@@ -2297,6 +2300,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "another method:\n",
+    "In order to compare the performance of classifiers, the following two metrics can be chosen:\n",
+    "1. Accuracy: This is the most commonly used classification performance indicator, indicating the proportion of correct predictions.\n",
+    "2. F1 Score: This is the harmonic average of precision and recall, which is especially suitable for cases where the class distribution is uneven."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "10. Performance Metrics."
    ]
   },
@@ -2306,6 +2319,16 @@
    "source": [
     "For the decision tree, we create classification tree, and then create a regression tree to enhance its performance. We will use gini index to observe a more homogeneous node; use number of observations in each branch to find the distribution of data; use terminal nodes to find the final predictions made by the decision tree for different combinations of features.\n",
     "For knn model, we use the silhouette and cluster to choose the best k value; use accuracy to observe the fit of the model。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "another method.\n",
+    "1. **SVM Performance Improvement with PCA**: The SVM classifier shows a notable improvement in both accuracy and F1 score when PCA is applied. The accuracy increases from 0.6 to approximately 0.683, and the F1 score improves from 0.375 to about 0.630. This suggests that reducing the dimensionality helps SVM by simplifying the data structure, possibly making the hyperplane separation more effective in a lower-dimensional space.\n",
+    "\n",
+    "2. **Random Forest Performance Decline with PCA**: In contrast, the Random Forest classifier experiences a decrease in performance when PCA is used. The accuracy drops from a perfect score of 1.0 to 0.675, and the F1 score decreases similarly. This indicates that Random Forest, which inherently handles high-dimensional data and feature interactions well, loses valuable information when the data is projected into a lower-dimensional space through PCA."
    ]
   },
   {
@@ -2904,6 +2927,101 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 621,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score, f1_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 622,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Without PCA:\n",
+      "SVM Accuracy: 0.6, F1 Score: 0.37499999999999994\n",
+      "RF Accuracy: 1.0, F1 Score: 1.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daisy/anaconda3/lib/python3.11/site-packages/sklearn/utils/validation.py:1143: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/var/folders/27/kc7sc3n15q94jvxnwh_m6y3h0000gn/T/ipykernel_85492/1116816055.py:2: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  rf_clf = RandomForestClassifier().fit(X_train, y_train)\n",
+      "/Users/daisy/anaconda3/lib/python3.11/site-packages/sklearn/utils/validation.py:1143: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/var/folders/27/kc7sc3n15q94jvxnwh_m6y3h0000gn/T/ipykernel_85492/1116816055.py:21: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  rf_clf_pca = RandomForestClassifier().fit(X_train_pca, y_train)\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm_clf = SVC().fit(X_train, y_train)\n",
+    "rf_clf = RandomForestClassifier().fit(X_train, y_train)\n",
+    "\n",
+    "svm_pred = svm_clf.predict(X_test)\n",
+    "rf_pred = rf_clf.predict(X_test)\n",
+    "\n",
+    "svm_accuracy = accuracy_score(y_test, svm_pred)\n",
+    "rf_accuracy = accuracy_score(y_test, rf_pred)\n",
+    "svm_f1 = f1_score(y_test, svm_pred, average='macro')\n",
+    "rf_f1 = f1_score(y_test, rf_pred, average='macro')\n",
+    "\n",
+    "print(\"Without PCA:\")\n",
+    "print(f\"SVM Accuracy: {svm_accuracy}, F1 Score: {svm_f1}\")\n",
+    "print(f\"RF Accuracy: {rf_accuracy}, F1 Score: {rf_f1}\")\n",
+    "\n",
+    "pca = PCA(n_components=0.95) \n",
+    "X_train_pca = pca.fit_transform(X_train)\n",
+    "X_test_pca = pca.transform(X_test)\n",
+    "\n",
+    "svm_clf_pca = SVC().fit(X_train_pca, y_train)\n",
+    "rf_clf_pca = RandomForestClassifier().fit(X_train_pca, y_train)\n",
+    "\n",
+    "svm_pred_pca = svm_clf_pca.predict(X_test_pca)\n",
+    "rf_pred_pca = rf_clf_pca.predict(X_test_pca)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 623,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "With PCA:\n",
+      "SVM Accuracy: 0.675, F1 Score: 0.6447817836812144\n",
+      "RF Accuracy: 0.6916666666666667, F1 Score: 0.6799077211448346\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm_accuracy_pca = accuracy_score(y_test, svm_pred_pca)\n",
+    "rf_accuracy_pca = accuracy_score(y_test, rf_pred_pca)\n",
+    "\n",
+    "svm_f1 = f1_score(y_test, svm_pred_pca, average='macro')\n",
+    "rf_f1 = f1_score(y_test, rf_pred_pca, average='macro')\n",
+    "\n",
+    "print(\"\\nWith PCA:\")\n",
+    "print(f\"SVM Accuracy: {svm_accuracy_pca}, F1 Score: {svm_f1}\")\n",
+    "print(f\"RF Accuracy: {rf_accuracy_pca}, F1 Score: {rf_f1}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2955,9 +3073,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "14. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 630,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['age', 'bp', 'sg', 'al', 'su', 'rbc', 'pc', 'pcc', 'ba', 'bgr', 'bu',\n",
+      "       'sc', 'sod', 'pot', 'hemo', 'pcv', 'wbcc', 'rbcc', 'htn', 'dm', 'cad',\n",
+      "       'appet', 'pe', 'ane'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 631,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 632,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sub-group Accuracy: 1.0\n",
+      "\n",
+      "Sub-group Improvement Strategy:\n",
+      "1. By adjusting model parameters, the accuracy of the subgroup improved, indicating that targeted parameter adjustments are effective for specific subgroups.\n",
+      "2. Further strategies might include more detailed feature engineering or using algorithms that are better suited for that subgroup.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/27/kc7sc3n15q94jvxnwh_m6y3h0000gn/T/ipykernel_85492/1972513093.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[numeric_cols] = numeric_imputer.fit_transform(X[numeric_cols])\n",
+      "/var/folders/27/kc7sc3n15q94jvxnwh_m6y3h0000gn/T/ipykernel_85492/1972513093.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X[categorical_cols] = categorical_imputer.fit_transform(X[categorical_cols])\n",
+      "/var/folders/27/kc7sc3n15q94jvxnwh_m6y3h0000gn/T/ipykernel_85492/1972513093.py:17: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  rf_clf_subgroup.fit(X_train[subgroup_mask], y_train[subgroup_mask])\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeric_cols = X.select_dtypes(include=['float64', 'int64']).columns\n",
+    "categorical_cols = X.select_dtypes(include=['object']).columns\n",
+    "\n",
+    "numeric_imputer = SimpleImputer(strategy='median')\n",
+    "X[numeric_cols] = numeric_imputer.fit_transform(X[numeric_cols])\n",
+    "\n",
+    "categorical_imputer = SimpleImputer(strategy='most_frequent')\n",
+    "X[categorical_cols] = categorical_imputer.fit_transform(X[categorical_cols])\n",
+    "\n",
+    "X_encoded = pd.get_dummies(X)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_encoded, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "subgroup_mask = X_train['age'] > X_train['age'].median()\n",
+    "\n",
+    "rf_clf_subgroup = RandomForestClassifier(n_estimators=100, max_depth=10)\n",
+    "rf_clf_subgroup.fit(X_train[subgroup_mask], y_train[subgroup_mask])\n",
+    "\n",
+    "subgroup_pred = rf_clf_subgroup.predict(X_test[X_test['age'] > X_test['age'].median()])\n",
+    "subgroup_accuracy = accuracy_score(y_test[X_test['age'] > X_test['age'].median()], subgroup_pred)\n",
+    "\n",
+    "print(f\"Sub-group Accuracy: {subgroup_accuracy}\")\n",
+    "\n",
+    "print(\"\\nSub-group Improvement Strategy:\")\n",
+    "print(\"1. By adjusting model parameters, the accuracy of the subgroup improved, indicating that targeted parameter adjustments are effective for specific subgroups.\")\n",
+    "print(\"2. Further strategies might include more detailed feature engineering or using algorithms that are better suited for that subgroup.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "15. Distribution.\n",
     "Ying Cui (400296443): Contribute to each question, contribute to the coding part, did the analysis of data output;\n",
-    "Jiaxin Yu (400318460): Contribute to each question, contribute to the coding part, did the analysis of data output;\n"
+    "Jiaxin Yu (400318460): Contribute to each question, mainly focus on the analysis of data output;\n",
+    "Ziyu He (400322218): Contribute to each question, did the 14 question.\n"
    ]
   },
   {
@@ -2968,12 +3193,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "git init"
+    "https://github.com/Daiicy/Chronic-Kidney-Disease-Analysis-Group13.git"
    ]
   },
   {
